Scrollbar CSS + Fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -389,3 +389,25 @@ footer{
     word-spacing: 2px;
     text-transform: capitalize;
 }
+
+/* =============SCROLLBAR============= */
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgb(59, 59, 59);;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
